@@ -1,5 +1,11 @@
 2011-08-3  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/nruncomp.boot, src/interp/daase.lisp,
+	src/interp/define.boot, src/interp/ncomp.boot: Better
+	compiler support for database bootstrap.
+
+2011-08-3  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/interp/buildom.boot: Add '~=' to builtion domains.
 
 2011-08-3  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
